<resources>
    <string name="app_name">NMedia</string>
    <string name="author">Netology. University of internet-professionnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn</string>
    <string name="published">20 july 2022 year at 18:00</string>
    <string name="post_text">Post text</string>
    <string name="netology_avatar">Netology avatar</string>
    <string name="description_post_menu_button">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_comment">Comment</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_visibility">Visibility</string>
    <string name="visibility_count">12,4K</string>
    <string name="like_count">78</string>
    <string name="comments_count">6</string>
    <string name="share_count">5</string>
    <string name="remove">Remove</string>
    <string name="save_button">Save Button</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_edit">Edit message</string>
    <string name="description_edit_avatar">Edit mode</string>
    <string name="description_cancel_button">Cancel</string>
    <string name="post_to_be_edited">Post to be edited</string>
    <string name="description_post_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="enter_new_post_text">Enter new post text here</string>
</resources>